examples/nic/ingress-resources/externalname/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: externalname
spec:
  ingressClassName: nginx-plus
  rules:
  - host: externalname.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
